--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ostream": "cpp",
         "iostream": "cpp",
         "stdlib.h": "c",
-        "string": "c"
+        "string": "c",
+        "iomanip": "cpp"
     }
 }
